--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <!-- Main CSS-->
-    <link rel="stylesheet"  href="~/Content/Test01/main.css">
+    <link rel="stylesheet" href="~/Content/Test01/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!-- Font-icon css-->
-    <link rel="stylesheet" 
+    <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+
 
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
@@ -109,16 +110,28 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
     <script src="js/popper.min.js"></script>
-    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
+    <script src="https://unpkg.g.com/boxicons@latest/dist/boxicons.js"></script>
     <!--===============================================================================================-->
     <script src="js/bootstrap.min.js"></script>
     <!--===============================================================================================-->
-    <script src="js/main.js"></script>
+    <script src="~/Content/js/main.js"></script>
     <!--===============================================================================================-->
-    <script src="js/plugins/pace.min.js"></script>
+    <script src="~/Content/js/plugins/pace.min.js"></script>
     <!--===============================================================================================-->
-    <script type="text/javascript" src="js/plugins/chart.js"></script>
+    <script type="text/javascript" src="~/Content/js/plugins/chart.js"></script>
     <!--===============================================================================================-->
+    <!--===============================================================================================-->
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    @*<script src="src/jquery.table2excel.js"></script>*@
+
+    <script type="text/javascript" src="~/Scripts/jquery.dataTables.min.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/dataTables.bootstrap.min.js"></script>
+
+    <script type="text/javascript">$('#sampleTable').DataTable();</script>
+
     <script type="text/javascript">
         var data = {
             labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6"],
@@ -193,6 +206,6 @@
         }
     </script>
     <script src="~/Content/ckeditor/ckeditor.js"></script>
-    @RenderSection("BaoCaoJS", false);
+
 </body>
 </html>
