--- a/Test02/Views/KinhDoanh/TrangChu.cshtml
+++ b/Test02/Views/KinhDoanh/TrangChu.cshtml
@@ -13,7 +13,8 @@
     <div class="tile">
         <h3 class="tile-title">Tình trạng đơn hàng</h3>
         <div>
-            <table class="table table-bordered">
+            <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+                   id="sampleTable">
                 <thead>
                     <tr>
                         <th>ID đơn hàng</th>
@@ -69,13 +70,15 @@
         <!-- / div trống-->
     </div>
 </div>
+
 <!-- / col-12 -->
 <!-- col-12 -->
 <div class="col-md-12">
     <div class="tile">
         <h3 class="tile-title">Danh sách đại lý mới</h3>
         <div>
-            <table class="table table-hover">
+            <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+                   id="sampleTable1">
                 <thead>
                     <tr>
                         <th>Mã đại lý</th>
@@ -120,4 +123,13 @@
                 </tbody>
             </table>
         </div>
+    </div>
+</div>
 
+<script>
+    oTable = $('#sampleTable1').dataTable();
+    $('#all').click(function (e) {
+        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
+        e.stopImmediatePropagation();
+    });
+</script>
